# nuc_ws

./: .gitignore  README.md
leo_exploration_ws/src/leo_exploration/: package.xml  setup.cfg  setup.py
leo_exploration_ws/src/leo_exploration/config/: ekf.yaml  ekf_sim.yaml  nav2_params.yaml  nav2_params_real.yaml  nav2_params_sim.yaml  nav_to_pose_no_spin.xml  ros_gz_bridge.yaml  rviz2_config.rviz  slam_toolbox_params.yaml  slam_toolbox_real.yaml  slam_toolbox_sim.yaml
leo_exploration_ws/src/leo_exploration/launch/: exploration_launch.py  sim_exploration_launch.py  step3_nav_explorer.launch.py
leo_exploration_ws/src/leo_exploration/leo_exploration/: frontier_explorer.py  lidar_filter.py  nav2_ready_check.py  odometry_tf_bridge.py  startup_check.py  system_monitor.py
leo_exploration_ws/src/leo_exploration/scripts/: install_sim_deps.sh  run_sim.sh
leo_exploration_ws/src/leo_exploration/urdf/: leo_rover.urdf
leo_exploration_ws/src/leo_exploration/worlds/: exploration_test.world
src/cobot_controller/: CMakeLists.txt  package.xml
src/cobot_controller/launch/: cobot_control.launch.py  cobot_control_sim.launch.py
src/cobot_controller/src/: cobot_control.cpp
src/cobot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/cobot_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  mycobot_280pi.srdf  ompl_planning.yaml  pilz_industrial_motion_planner_planning.yaml  ros2_controllers.yaml  ros2_controllers_template.yaml
src/cobot_moveit_config/launch/: load_ros2_controllers.launch.py  move_group.launch.py
src/cobot_moveit_config/rviz/: move_group.rviz
src/controller_interfaces/: CMakeLists.txt  package.xml
src/controller_interfaces/msg/: DetectedObjects.msg
src/controller_interfaces/srv/: ControllerPositionSet.srv  ControllerSet.srv
src/controller_package/: package.xml  setup.py
src/controller_package/controller_package/: main_controller.py
src/demo_scripts/: package.xml  setup.cfg  setup.py
src/demo_scripts/demo_scripts/: demo_drop.py  demo_pick.py  demo_pick_vision.py  demo_scan.py  promo_scan.py
src/demo_scripts/launch/: demo_scan.launch.py
src/demonstration_controller/: LICENSE  package.xml  setup.cfg  setup.py
src/demonstration_controller/demonstration_controller/: demo_takeover.py  intial_pos_test.py  look_then_pick_just_manipulator.py  move_to_block_pick.py  object_detect_and_pick.py  object_detect_pick_place.py  testing_script.py
src/leo_controller_interface_package/: CMakeLists.txt  package.xml
src/leo_controller_interface_package/srv/: ControllerPositionSet.srv
src/leo_exploration/: setup.py
src/leo_exploration/config/: ekf_real.yaml  nav2_params_real.yaml  ros_gz_bridge.yaml  rviz2_config.rviz  slam_toolbox_real.yaml
src/leo_exploration/launch/: sim_exploration_launch.py  step1_lidar.launch.py  step2_slam.launch.py
src/leo_exploration/leo_exploration/: frontier_explorer.py  odometry_tf_bridge.py  startup_check.py  system_monitor.py
src/leo_exploration/scripts/: obstacle_manager.sh
src/leo_exploration/urdf/: leo_rover.urdf
src/leo_joy_example/: package.xml  setup.py
src/leo_joy_example/config/: joy_mapping.yaml
src/leo_joy_example/launch/: joy.launch.py
src/leo_joy_example/leo_joy_example/: manager_node.py
src/nuc/: package.xml  setup.cfg  setup.py
src/nuc/nuc/: nuc_example_node.py
src/object_detection/: package.xml  setup.py
src/object_detection/object_detection/: object_detect.py
src/robot_bringup/: CMakeLists.txt  package.xml
src/robot_bringup/launch/: leo_cobot_gz.launch.py  spawn_leo_cobot.launch.py
src/robot_bringup/scripts/: full_launch.sh  mycobot_280pi_gazebo_moveit.sh  no_exploration_launch.sh
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/launch/: launch_utils.py  robot_state_publisher.launch.py  view_model.launch.py
src/robot_description/meshes/rgbd_camera/: camera_mount.stl
src/robot_description/urdf/adaptive_gripper/: adaptive_gripper.urdf.xacro  gripper_with_camera.urdf.xacro
src/robot_description/urdf/control/: gazebo_sim_ros2_control.urdf.xacro  mycobot_280_ros2_control.urdf.xacro
src/robot_description/urdf/leo_cobot/: leo_cobot_sim.urdf.xacro
src/robot_description/urdf/mycobot_280pi/: mycobot_280pi.urdf.xacro  mycobot_280pi_arm.urdf.xacro
src/robot_description/urdf/rgbd_camera/: _d435.urdf.xacro  _d435i.urdf.xacro  _usb_plug.urdf.xacro  d435i_mounted.urdf.xacro
src/robot_description/urdf/view/: view_adaptive_gripper.urdf.xacro  view_d435i_camera.urdf.xacro  view_gripper_with_camera.urdf.xacro  view_leo_cobot_sim.urdf.xacro  view_mounted_d435i.urdf.xacro  view_mycobot_280pi.urdf.xacro  view_mycobot_280pi_arm.urdf.xacro
