<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cobot_moveit_config</name>
  <version>0.0.0</version>
  <description>MoveIt2 configuration, launch files, and SRDF files for the myCobot 280 Pi.</description>
  <maintainer email="174347826+bt-nav@users.noreply.github.com">Team 4</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rviz2</depend>
  <depend>rviz_visual_tools</depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_ros_visualization</depend>
  <depend>moveit_ros_move_group</depend>
  <depend>moveit_kinematics</depend>
  <depend>controller_manager</depend>
  <depend>trajectory_msgs</depend>
  <depend>python3-numpy</depend>
  <depend>rclcpp</depend>
  <depend>xacro</depend>

  <exec_depend>moveit_simple_controller_manager</exec_depend>
  <exec_depend>moveit_configs_utils</exec_depend>
  <exec_depend>moveit_planners_stomp</exec_depend>
  <exec_depend>moveit_planners_ompl</exec_depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
